--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>Simple app that uses a weather api to show the weather forecast.</p>
+        <p>A simple app that uses a weather api to show the weather forecast.</p>
     </div>
 
     {{>footer}}
