added location button

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,6 +12,8 @@
     <div class="main-content">
         {{>header}}
 
+        <button id="location">Get my Location</button>
+        <p>OR</p>
         <p>Enter city to get your weather!</p>
 
         <form>
