--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
 
-        <button id="location">Get my Location</button>
+        <button id="location" class="location-button">Get My Location</button>
         <p>OR</p>
         <p>Enter city to get your weather!</p>
 
